# claude-md-compiler

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.codex/skills/: _index.md  debugging.md  rfc-implementation.md  rule-engine.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml  validate_proofs.yml
docs/: library-usage.md  proofs.md
docs/plans/: 2026-04-04-cldc-cron-log.md
docs/rfcs/: CLDC-0001-policy-lockfile.md  CLDC-0001-policy-source-model.md  CLDC-0002-check-report.md  CLDC-0002-rule-dsl-v1.md  CLDC-0003-compiler-ir-and-lockfile.md  CLDC-0003-fix-plan.md  CLDC-0004-repo-scanner-and-topology-index.md  CLDC-0004-require-claim.md  CLDC-0005-execution-event-model.md  CLDC-0005-preset-packs.md  CLDC-0006-validator-engine.md  CLDC-0007-enforcement-modes.md  CLDC-0008-fix-suggestions-and-autofix-hooks.md  CLDC-0009-cli-surface.md  CLDC-0010-ci-and-git-integration.md  CLDC-0011-explainability-report-model.md  CLDC-0012-preset-packs.md  README.md
docs/specs/: product-spec.md
proofs/: git_integration.lean  hook_generation.lean  lake-manifest.json  lakefile.toml  policy_compiler.lean  rule_parser.lean  runtime_evaluator.lean
scripts/: validate_proofs.sh
src/cldc/: __init__.py  _logging.py  errors.py  scaffold.py
src/cldc/cli/: __init__.py  main.py
src/cldc/compiler/: __init__.py  policy_compiler.py
src/cldc/ingest/: __init__.py  discovery.py  source_loader.py
src/cldc/parser/: __init__.py  rule_parser.py
src/cldc/presets/: __init__.py  loader.py
src/cldc/presets/packs/: default.yml  docs-sync.yml  strict.yml
src/cldc/runtime/: __init__.py  claude_code_adapter.py  evaluator.py  events.py  git.py  hooks.py  remediation.py  report_schema.py  reporting.py
src/cldc/tui/: __init__.py  app.py  state.py  styles.tcss  widgets.py
tests/: smoke_test.py  test_benchmarks.py  test_claude_code_adapter.py  test_cli.py  test_compiler.py  test_errors.py  test_events.py  test_hooks.py  test_logging.py  test_presets.py  test_properties.py  test_remediation.py  test_reporting.py  test_rule_parser.py  test_runtime.py  test_scaffold.py  test_source_loader.py  test_tui.py  test_validation.py  test_version.py
tests/e2e/: __init__.py  compiler.yaml  conftest.py  demo.py  shared.py  test_langchain_policy.py
tests/fixtures/repo_a/: .claude-compiler.yaml  CLAUDE.md
tests/fixtures/repo_a/policies/: commands.yml
