
[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "claude-md-compiler"
version = "0.1.1"
description = "Compile CLAUDE.md into enforceable repo policy for Claude Code"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hermes Agent" },
]
keywords = ["claude", "policy", "cli", "compiler", "ci", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/AbdelStark/claude-md-compiler"
Repository = "https://github.com/AbdelStark/claude-md-compiler"
Issues = "https://github.com/AbdelStark/claude-md-compiler/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cldc = "cldc.cli.main:main"

[tool.uv.build-backend]
module-name = "cldc"
source-include = [
  "docs/**",
  "tests/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
