
[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "claude-md-compiler"
version = "0.1.1"
description = "Compile CLAUDE.md into enforceable repo policy for Claude Code"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hermes Agent" },
]
keywords = ["claude", "policy", "cli", "compiler", "ci", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/AbdelStark/claude-md-compiler"
Repository = "https://github.com/AbdelStark/claude-md-compiler"
Issues = "https://github.com/AbdelStark/claude-md-compiler/issues"

[dependency-groups]
dev = [
  "hypothesis>=6",
  "pytest>=8.0",
  "pytest-benchmark>=4",
  "pytest-cov>=5",
  "ruff>=0.6",
  "pyright>=1.1",
  "types-PyYAML>=6",
]

[project.scripts]
cldc = "cldc.cli.main:main"

[tool.uv.build-backend]
module-name = "cldc"
source-include = [
  "docs/**",
  "tests/**",
  "src/cldc/py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers --benchmark-skip"
markers = [
  "benchmark: performance benchmarks (run with --benchmark-only)",
  "slow: tests that take more than a second",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# E501 (line-too-long) is intentionally omitted: argparse help strings,
# rendered error messages, and test assertions routinely exceed the limit
# for readability. All other style and correctness rules still apply.
ignore = ["E501"]

[tool.ruff.format]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.coverage.run]
source = ["src/cldc"]
branch = true
# The CLI shell is tested exhaustively through subprocess integration tests
# in tests/test_cli.py. Coverage.py cannot see those because the subprocess
# runs in a separate interpreter. Excluding it keeps the gate meaningful for
# the library modules (which ARE measured) without double-counting the CLI.
omit = ["src/cldc/cli/main.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
