
[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "claude-md-compiler"
version = "0.2.0"
description = "Compile structured Claude Code workflow policy into versioned artifacts and enforce it against runtime evidence, hooks, and git diffs."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "AbdelStark", email = "noreply@github.com" },
]
maintainers = [
  { name = "AbdelStark", email = "noreply@github.com" },
]
keywords = [
  "claude",
  "claude-code",
  "agent",
  "agentic",
  "policy",
  "policy-as-code",
  "guardrails",
  "lockfile",
  "compiler",
  "linter",
  "cli",
  "ci",
  "pre-commit",
  "automation",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
  "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "textual>=0.80",
]

[project.urls]
Homepage = "https://github.com/AbdelStark/claude-md-compiler"
Documentation = "https://github.com/AbdelStark/claude-md-compiler#readme"
Repository = "https://github.com/AbdelStark/claude-md-compiler"
Issues = "https://github.com/AbdelStark/claude-md-compiler/issues"
Changelog = "https://github.com/AbdelStark/claude-md-compiler/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/AbdelStark/claude-md-compiler"

[dependency-groups]
dev = [
  "hypothesis>=6",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",
  "pytest-cov>=5",
  "ruff>=0.6",
  "pyright>=1.1",
  "types-PyYAML>=6",
]

[project.scripts]
cldc = "cldc.cli.main:main"

[tool.uv.build-backend]
module-name = "cldc"
source-include = [
  "docs/**",
  "tests/**",
  "src/cldc/py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers --benchmark-skip -m 'not e2e'"
markers = [
  "benchmark: performance benchmarks (run with --benchmark-only)",
  "e2e: end-to-end tests that clone real upstream repos; opt-in via `make e2e` or `pytest -m e2e`",
  "slow: tests that take more than a second",
]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# E501 (line-too-long) is intentionally omitted: argparse help strings,
# rendered error messages, and test assertions routinely exceed the limit
# for readability. All other style and correctness rules still apply.
ignore = ["E501"]

[tool.ruff.format]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.coverage.run]
source = ["src/cldc"]
branch = true
# The CLI shell is tested exhaustively through subprocess integration tests
# in tests/test_cli.py. Coverage.py cannot see those because the subprocess
# runs in a separate interpreter. Excluding it keeps the gate meaningful for
# the library modules (which ARE measured) without double-counting the CLI.
# The TUI is exercised via Textual's Pilot in tests/test_tui.py but the bulk
# of its surface is reactive UI plumbing that does not benefit from line
# coverage — excluded so the gate stays honest for the policy core.
omit = [
  "src/cldc/cli/main.py",
  "src/cldc/tui/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
